<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registry_pledger_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    android:orientation="vertical"
    tools:context=".ui.reg_p">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/headline_reg_h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textSize="46sp" />

    <LinearLayout
        android:id="@+id/name_h_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fullname_fill_h"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fullname_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/fullname_title_h"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/fullname"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/year_h_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/years_fill_h"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:isScrollContainer="true"
            android:layoutDirection="rtl"
            android:scrollbars="none"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/years_title_h"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/yearofbirth"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/address_h_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/address_reg_h"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/address_residance"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/address_h"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/address"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/op_code_cell"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:dropDownWidth="wrap_content"
            android:layoutDirection="rtl"
            android:longClickable="false"
            android:scrollbars="none"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/cellphone_reg_h"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:layoutDirection="rtl"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/phone_h"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/cellphone"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email_reg_h"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:layoutDirection="rtl"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/email_h"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:layoutDirection="rtl"
            android:text="@string/email"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password_reg_h"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:layoutDirection="rtl"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/password_title"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:gravity="center_vertical|end"
            android:layoutDirection="rtl"
            android:text="@string/password"
            android:textSize="30sp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/taknon_check"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:keyboardNavigationCluster="false"
        android:layoutDirection="rtl"
        android:text="@string/taknon"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="232dp"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:drawableTint="#D33030"
        android:gravity="center"
        android:layoutDirection="rtl"
        android:text="@string/confirm_reg"
        android:textAlignment="center"

        android:textSize="36sp"
        android:textStyle="bold" />
</LinearLayout>