<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_p_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_background"
    tools:context=".ui.main_p">

    <TextView
        android:id="@+id/new_pledge_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pledger_history"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/type_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/type_list"
        android:layout_width="346dp"
        android:layout_height="197dp"
        android:background="@color/pledge_window_background"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187">

        <LinearLayout
            android:id="@+id/requests_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/btn_ask"
        android:layout_width="283dp"
        android:layout_height="80dp"
        android:text="@string/pledger_ask"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_list"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btn_your_pledges"
        android:layout_width="283dp"
        android:layout_height="80dp"
        android:text="@string/pledger_your_pledges"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ask"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btn_edit_details"
        android:layout_width="283dp"
        android:layout_height="80dp"
        android:text="@string/pledger_edit_details"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_your_pledges"
        app:layout_constraintVertical_bias="0.05" />

    <ImageButton
        android:id="@+id/btn_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:backgroundTintMode="screen"
        android:contentDescription="@string/support_button"
        android:src="@mipmap/btn_support_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit_details"

        />

</androidx.constraintlayout.widget.ConstraintLayout>